tests/compile_time_tests/bad-type-struct.stderr
error: cannot derive `TagName` for struct types
 --> tests/compile_time_tests/bad-type-struct.rs:4:5
  |
4 | pub struct ArbitraryStruct {
  |     ^^^^^^
