tests/compile_time_tests/bad-type-struct.rs
use tagname::TagName;

#[derive(TagName)]
pub struct ArbitraryStruct{
}

fn main() {}
